--- a/assets/index.html
+++ b/assets/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<title>Perks Layer 7 Dstat</title>
+<title>L7 DSTAT</title>
 <meta content="Click this" property="og:title" />
 <meta content="This is a Layer 7 dstats used to measure requests on pentesting.lol" property="og:description" />
 <meta content="https://embed.com/this-is-the-site-url" property="og:url" />
