--- a/assets/index.html
+++ b/assets/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 
-<title>L7 DSTAT</title>
+<title>pentesting.lol</title>
 <meta content="Click this" property="og:title" />
 <meta content="This is a Layer 7 dstats used to measure requests on pentesting.lol" property="og:description" />
-<meta content="https://embed.com/this-is-the-site-url" property="og:url" />
+<meta content="https://pentesting.lol" property="og:url" />
 <meta content="https://embed.com/embedimage.png" property="og:image" />
 <meta content="#43B581" data-react-helmet="true" name="theme-color" />
 
@@ -25,7 +25,7 @@
             <div id='graph' style='border-radius: 15px'></div>
             </div>
             <div style='background: #000000; width: 90%; height: 90%; margin: 20px 20px 20px 20px; border-radius: 15px' id='stats'>
-            <h2 style="color: rgb(255, 255, 255)">Stats</h2> 
+            <h2 style="color: rgb(255, 255, 255)">Info</h2> 
             <p>Highest Number of Requests: <span id='max_requests'></span></p>
             <p>Requests Per Day: <span id='total_day_requests'></span></p>
        </div>
