Added stuff in index.

--- a/assets/index.html
+++ b/assets/index.html
@@ -28,6 +28,7 @@
             <h2 style="color: rgb(255, 255, 255)">Info</h2> 
             <p>Highest Number of Requests: <span id='max_requests'></span></p>
             <p>Requests Per Day: <span id='total_day_requests'></span></p>
+            <p> If you would like to see and edit the source, you can find it on my <a href="https://github.com/vperked/Layer7-Dstat"> Github. </a></p>
        </div>
       </center>
    </body>
